<resources>
    <string name="app_name">Aspose Barcode Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aspose Barcode</string>
    <string name="nav_header_subtitle">developers@aspose.com</string>
    <string name="nav_header_desc">Navigation menu</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recognition">Recognition</string>
    <string name="menu_generation">Generation</string>
    <string name="menu_home">Home</string>
    <string name="menu_generator_view_example">GeneratorView Example</string>

    <!--   TODO check - From Application 3-->
    <string name="back_button_text">BACK</string>
    <string name="custom_barcode_input_text">123456789</string>
    <string name="custom_generation_check_box_text">Select to generate from custom data</string>
    <string name="generate_button_text">GENERATE</string>
    <string name="import_contact_checkbox_text">Import contact</string>
    <string name="save_to_file_checkbox_text4">Save to file</string>
    <string name="switch_camera_button_text">SWITCH</string>
    <string name="recognize_button_text">RECOGNIZE</string>
    <string name="turn_on_off_flash_button_text">FLASH\n(NOT WORK)</string>
    <string name="to_generation_activity_button_text">Generation</string>
    <string name="to_recognition_activity_button_text">Recognition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>