<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aspose.barcode.app.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_recognition"
        android:name="com.aspose.barcode.app.fragments.barcoderecognition.FullScreenRecognitionFragment"
        android:label="@string/menu_recognition"
        tools:layout="@layout/fragment_recognition" />
    <fragment
        android:id="@+id/nav_generation"
        android:name="com.aspose.barcode.app.fragments.barcodegeneration.GenerationFragment"
        android:label="@string/menu_generation"
        tools:layout="@layout/fragment_generation"/>
</navigation>