<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RecognitionFragment"
    android:tag="RecognitionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aspose.barcode.app.fragments.barcoderecognition.RecognitionFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_v_begin_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_v_end_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_v_begin_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_v_end_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <Spinner
        android:id="@+id/cameraResolutionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cameraView"
        app:layout_constraintRight_toLeftOf="@id/cameraResolutionSpinnerLabel"
        app:layout_constraintLeft_toLeftOf="@+id/line_v_begin_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cameraResolutionSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/cameraResolutionSpinner"
        android:text="Select resolution"
        app:layout_constraintBottom_toTopOf="@+id/cameraView"
        app:layout_constraintLeft_toRightOf="@+id/line_v_begin_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraResolutionSpinner" />

    <TextView
        android:id="@+id/decodeTypeSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/decodeTypeSpinner"
        android:text="Select Decode Type"
        app:layout_constraintLeft_toLeftOf="@id/line_v_begin_2"
        app:layout_constraintTop_toBottomOf="@id/cameraView" />

    <Spinner
        android:id="@+id/decodeTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/line_v_begin_1"
        app:layout_constraintTop_toBottomOf="@id/decodeTypeSpinnerLabel" />

    <TextView
        android:id="@+id/recognitionQualitySpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/recognitionQualitySpinner"
        android:text="Select Recognition Quality"
        app:layout_constraintLeft_toLeftOf="@id/line_v_begin_2"
        app:layout_constraintTop_toBottomOf="@id/decodeTypeSpinner" />

    <Spinner
        android:id="@+id/recognitionQualitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="@+id/line_v_begin_1"
        app:layout_constraintTop_toBottomOf="@id/recognitionQualitySpinnerLabel" />


    <CheckBox
        android:id="@+id/importContactCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/import_contact_checkbox_text"
        app:layout_constraintLeft_toLeftOf="@+id/line_v_begin_1"
        app:layout_constraintTop_toBottomOf="@id/recognitionQualitySpinner"/>

    <CheckBox
        android:id="@+id/saveToFileCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_file_checkbox_text4"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/line_v_begin_2"
        app:layout_constraintTop_toBottomOf="@id/recognitionQualitySpinner"/>

    <Button
        android:id="@+id/recognizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recognize_button_text"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/line_v_begin_1"
        app:layout_constraintTop_toBottomOf="@id/importContactCheckBox" />

    <Button
        android:id="@+id/switchCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_camera_button_text"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/line_v_begin_2"
        app:layout_constraintTop_toBottomOf="@+id/importContactCheckBox"/>



<!--    <Button-->
<!--        android:id="@+id/flashlightButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/turn_on_off_flash_button_text"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/recognizeButton" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
